# enjam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/enjam/: Test.h  api.h  application.h  assert.h  asset.h  asset_buffer.h  asset_manager.h  assetfile_parser.h  assetfile_reader.h  assetfile_serializer.h  assetfile_writer.h  assets_manager.h  assets_repository.h  byte_array.h  compiler.h  context.h  dcc_asset.h  define.h  defines.h  dependencies.h  di.h  engine.h  enjam.h  event.h  handle_allocator.h  input.h  input_events.h  library_loader.h  log.h  material.h  math.h  math_assetparser.h  platform.h  platform_glfw.h  platform_mac.h  platform_win.h  program.h  render_primitive.h  render_view.h  renderer.h  (+13 more)
engine/src/: Test.cpp  application.cpp  asset.cpp  asset_manager.cpp  assetfile_parser.cpp  assetfile_reader.cpp  assetfile_serializer.cpp  assets_repository.cpp  context.cpp  engine.cpp  input.cpp  library_loader.cpp  opengl_types.h  platform.cpp  platform_glfw.cpp  platform_mac.cpp  platform_win.cpp  program.cpp  render_primitive.cpp  render_view.cpp  renderer.cpp  renderer_backend_opengl.cpp  renderer_backend_vulkan.cpp  scene.cpp  utils.cpp  window_mock.cpp
engine/test/: CMakeLists.txt  asset_file_serializer.cpp  asset_fileparser_test.cpp
engine/tests/: CMakeLists.txt  assetfile_tests.cpp
libs/enjector/: CMakeLists.txt
libs/enjector/include/enjector/: enjector.h  factories.h
libs/enjector/include/njctr/: njctr.h
libs/enjector/src/: enjector.cpp
libs/enjector/tests/: common_tests.cpp  test.h  tests.cpp
libs/njctr/: CMakeLists.txt
libs/njctr/include/njctr/: njctr.h
libs/njctr/src/: njctr.cpp
libs/njctr/tests/: common_tests.cpp  test.h
libs/vulkan/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/shaders/: fragment.glsl  simple.frag  vertex.glsl
sandbox/src/: game.cpp  game.h  main.cpp  sandbox.cpp
tools/dcc_importer/: CMakeLists.txt
tools/dcc_importer/src/: dcc_importer.cpp
tools/njtex/: CMakeLists.txt
tools/njtex/src/: njtex.cpp
tools/shader_importer/: CMakeLists.txt
tools/shader_importer/src/: shader_importer.cpp
tools/tex_importer/: CMakeLists.txt
tools/tex_importer/src/: tex_importer.cpp
